[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Menus/Level_Selector_Menu/Assets/selector_sprite_selected2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Menus/Level_Selector_Menu/Assets/selector_sprite_selected1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menus/Level_Selector_Menu/Level_Selector.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menus/Main/Assets/backgroundMenu.jpg" type="Texture" id=4]
[ext_resource path="res://Scenes/Menus/Main/Assets/button-return2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menus/Main/Assets/button-return1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Menus/Level_Selector_Menu/Level1Selector.gd" type="Script" id=7]
[ext_resource path="res://Fonts/pixelmix_bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 8 )

[node name="LevelSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.48181
margin_top = 5.3454
margin_right = 1.48181
margin_bottom = 5.34546
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -5.0
margin_right = 1920.0
margin_bottom = 1071.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -634.0
margin_top = -150.0
margin_right = 634.0
margin_bottom = 150.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1Selector" type="TextureButton" parent="VBoxContainer"]
margin_right = 420.0
margin_bottom = 300.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 7 )

[node name="Label" type="Label" parent="VBoxContainer/Level1Selector"]
margin_left = 27.6375
margin_top = 59.0269
margin_right = 187.637
margin_bottom = 188.027
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2Selector" type="TextureButton" parent="VBoxContainer"]
margin_left = 450.0
margin_right = 870.0
margin_bottom = 300.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
stretch_mode = 1

[node name="Level3Selector" type="TextureButton" parent="VBoxContainer"]
margin_left = 900.0
margin_right = 1320.0
margin_bottom = 300.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )
stretch_mode = 1

[node name="ReturnButton" type="TextureButton" parent="."]
margin_left = 1787.35
margin_top = 28.0316
margin_right = 1865.35
margin_bottom = 88.0316
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Level1Selector" to="." method="_on_Level1Selector_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2Selector" to="." method="_on_Level2Selector_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3Selector" to="." method="_on_Level3Selector_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
